集成http框架。登录页面

--- a/Literature-frontend/src/css/common.less
+++ b/Literature-frontend/src/css/common.less
@@ -1,5 +1,18 @@
 @mainColor: #86BD77;
 
+.my-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 46px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.van-form {
+  width: 100%;
+}
+
 .avatar(@size:60px) {
   width: @size;
   height: @size;
