做手机端页面

--- a/Literature-frontend/src/css/common.less
+++ b/Literature-frontend/src/css/common.less
@@ -9,6 +9,15 @@
   box-sizing: border-box;
 }
 
+.item-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border-bottom: 1px solid #aaa;
+  padding: 5px 10px;
+  box-sizing: border-box;
+}
+
 .van-form {
   width: 100%;
 }
